<resources>
    <string name="app_name">Library</string>
    <string name="welcome">欢迎使用个人藏书管理系统！</string>
    <string name="add_book">添加图书</string>
    <string name="show_book">查看图书</string>
    <string name="input_hint">请输入图书ISBN</string>
    <string name="search">查询</string>
    <string name="search_result">查询结果：</string>
    <string name="book_name">书&#160;&#160;&#160;名：</string>
    <string name="author">作&#160;&#160;&#160;者：</string>
    <string name="publisher">出&#160;版&#160;社：</string>
    <string name="page_num">页&#160;&#160;&#160;数：</string>
    <string name="time">出版日期：</string>
    <string name="price">定&#160;&#160;&#160;价：</string>
    <string name="category">丛&#160;&#160;&#160;书：</string>
    <string name="cover">封&#160;&#160;&#160;面：</string>
    <string name="book_list">藏书列表</string>
    <string name="save_book">保存该书目</string>
    <string name="book_name1">书名</string>
    <string name="author1">作者</string>
    <string name="publisher1">出版社</string>
    <string name="page_num1">页数</string>
    <string name="time1">出版日期</string>
    <string name="price1">定价</string>
    <string name="category1">丛书</string>
    <string name="search_hint">输入作者名以查询</string>
    <string name="sort_by_author">按作者名排序</string>
    <string name="sort_by_date">按出版日期排序</string>
    <string name="show_price">显示价格</string>
    <string name="text_size">字号</string>
    <string name="save_setting">保存设置</string>
</resources>