<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/isbn"
            android:layout_weight="4"
            android:layout_height="58dp"
            android:drawableStart="@drawable/ic_baseline_book_24"
            android:drawablePadding="15dp"
            android:hint="@string/input_hint"
            android:inputType="number"
            tools:ignore="MissingConstraints"
            android:layout_width="0dp">
        </EditText>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            tools:ignore="MissingConstraints">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/book_name">
            </TextView>
            <TextView
                android:id="@+id/book_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/author">
            </TextView>
            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/publisher">
            </TextView>
            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/page_num">
            </TextView>

            <TextView
                android:id="@+id/page_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/time">
            </TextView>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/price">
            </TextView>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category">
            </TextView>
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3">
            </TextView>
        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="10dp">-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/cover">-->
<!--            </TextView>-->
<!--            <TextView-->
<!--                android:id="@+id/cover"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="3">-->
<!--            </TextView>-->
<!--        </LinearLayout>-->
        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_book"
            android:layout_marginHorizontal="10dp"
            android:onClick="btn4Click"/>

    </LinearLayout>

</LinearLayout>